--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,20 @@ set(CMAKE_CXX_COMPILER      "/usr/bin/clang++")
 set(CXX_STANDARD 20)
 set(FLAGS -Wall -Werror -Wpedantic -Wextra)
 
+set(SRC     ../Source/Transaction.cpp)
+
+add_library(${PROJECT_NAME}-lib     ${SRC})
 add_executable(${PROJECT_NAME} main.cpp)
 
-target_compile_options(${PROJECT_NAME} PRIVATE ${FLAGS})
-set_target_properties(${PROJECT_NAME}   PROPERTIES
-                                        CXX_STANDARD 20
-                                        CXX_STANDARD_REQUIRED ON)
+target_link_libraries(${PROJECT_NAME}   PRIVATE ${PROJECT_NAME}-lib)
+
+target_compile_options(${PROJECT_NAME}-lib  PRIVATE ${FLAGS})
+target_compile_options(${PROJECT_NAME}      PRIVATE ${FLAGS})
+
+set_target_properties(${PROJECT_NAME}-lib   PROPERTIES
+                                            CXX_STANDARD 20
+                                            CXX_STANDARD_REQUIRED ON)
+set_target_properties(${PROJECT_NAME}       PROPERTIES
+                                            CXX_STANDARD 20
+                                            CXX_STANDARD_REQUIRED ON)
 
