STL includes moved to precompiled modules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,8 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.26)
 project(MoneyTracker)
 
-set(CMAKE_CXX_COMPILER      "/usr/bin/clang++")
-set(CXX_STANDARD 20)
-set(FLAGS -Wall -Werror -Wpedantic -Wextra)
+set(CMAKE_CXX_COMPILER      "/usr/bin/clang++-18")
+set(FLAGS -Wall -Werror -Wpedantic -Wextra -std=c++20 -fmodules -Wno-experimental-header-units)
 
 set(SRC     ../Source/Category.cpp
             ../Source/Transaction.cpp
@@ -13,6 +12,21 @@ set(SRC     ../Source/Category.cpp
             ../Source/Menu.cpp)
 
 set(GMOCK_LIBRARIES /usr/lib/libgmock.a  /usr/lib/libgmock_main.a)
+
+set(PRECOMPILED_STL -fmodule-file=../Source/Modules/algorithm.pcm
+                    -fmodule-file=../Source/Modules/chrono.pcm
+                    -fmodule-file=../Source/Modules/concepts.pcm
+                    -fmodule-file=../Source/Modules/fstream.pcm
+                    -fmodule-file=../Source/Modules/iostream.pcm
+                    -fmodule-file=../Source/Modules/memory.pcm
+                    -fmodule-file=../Source/Modules/ranges.pcm
+                    -fmodule-file=../Source/Modules/string.pcm
+                    -fmodule-file=../Source/Modules/stdexcept.pcm
+                    -fmodule-file=../Source/Modules/thread.pcm
+                    -fmodule-file=../Source/Modules/tuple.pcm
+                    -fmodule-file=../Source/Modules/type_traits.pcm
+                    -fmodule-file=../Source/Modules/utility.pcm
+                    -fmodule-file=../Source/Modules/vector.pcm)
             
 find_package(GTest REQUIRED)
 
@@ -26,9 +40,9 @@ target_link_libraries(${PROJECT_NAME}-gt    PRIVATE     ${PROJECT_NAME}-lib
                                                         ${GMOCK_LIBRARIES}
                                                         pthread)
 
-target_compile_options(${PROJECT_NAME}-lib  PRIVATE ${FLAGS})
-target_compile_options(${PROJECT_NAME}      PRIVATE ${FLAGS})
-target_compile_options(${PROJECT_NAME}-gt   PRIVATE ${FLAGS})
+target_compile_options(${PROJECT_NAME}-lib  PRIVATE ${FLAGS} ${PRECOMPILED_STL})
+target_compile_options(${PROJECT_NAME}      PRIVATE ${FLAGS} ${PRECOMPILED_STL})
+target_compile_options(${PROJECT_NAME}-gt   PRIVATE ${FLAGS} ${PRECOMPILED_STL})
 
 set_target_properties(${PROJECT_NAME}-lib   PROPERTIES
                                             CXX_STANDARD 20
